--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "chatcord",
+  "name": "chatBot",
   "version": "1.0.0",
-  "description": "Realtime chat app with rooms",
+  "description": "this is a real time chat application here u can connect with multiple users in multiple groups",
   "main": "server.js",
   "scripts": {
     "start": "node server",
     "dev": "nodemon server"
   },
-  "author": "Brad Traversy",
+  "author": "gaurav pandey",
   "license": "MIT",
   "dependencies": {
     "@socket.io/redis-adapter": "^7.1.0",
